[project]
name = "fine-tuning-bert-for-text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "hf-xet>=1.1.8",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
